--- a/test/style.css
+++ b/test/style.css
@@ -1,4 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-color: whitesmoke;
+}
 .box {
     width: 298px;
     height: 415px;
+    text-align: center;
+    margin: auto;
+    background-color: #fff;
 }
