--- a/test/style.css
+++ b/test/style.css
@@ -5,10 +5,21 @@
 body {
     background-color: whitesmoke;
 }
+a {
+    text-decoration: none;
+}
 .box {
     width: 298px;
     height: 415px;
     text-align: center;
-    margin: auto;
+    margin: 100px auto;
     background-color: #fff;
+    display: block;
+}
+.img{
+    width: 100%;
+}
+.review {
+    font-size: 14px;
+    height: 30px;
 }
